; ModuleID = '/home/carl/AnghaBench/mpv/osdep/extr_main-fn-win.c_has_redirected_stdio.c'
source_filename = "/home/carl/AnghaBench/mpv/osdep/extr_main-fn-win.c_has_redirected_stdio.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@STD_INPUT_HANDLE = common dso_local global i32 0, align 4
@STD_OUTPUT_HANDLE = common dso_local global i32 0, align 4
@STD_ERROR_HANDLE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @has_redirected_stdio to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @has_redirected_stdio() #0 {
  %1 = load i32, i32* @STD_INPUT_HANDLE, align 4
  %2 = call i32 @GetStdHandle(i32 %1)
  %3 = call i64 @is_valid_handle(i32 %2)
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %15, label %5

5:                                                ; preds = %0
  %6 = load i32, i32* @STD_OUTPUT_HANDLE, align 4
  %7 = call i32 @GetStdHandle(i32 %6)
  %8 = call i64 @is_valid_handle(i32 %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %15, label %10

10:                                               ; preds = %5
  %11 = load i32, i32* @STD_ERROR_HANDLE, align 4
  %12 = call i32 @GetStdHandle(i32 %11)
  %13 = call i64 @is_valid_handle(i32 %12)
  %14 = icmp ne i64 %13, 0
  br label %15

15:                                               ; preds = %10, %5, %0
  %16 = phi i1 [ true, %5 ], [ true, %0 ], [ %14, %10 ]
  %17 = zext i1 %16 to i32
  ret i32 %17
}

declare dso_local i64 @is_valid_handle(i32) #1

declare dso_local i32 @GetStdHandle(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
